# ds685midterm

./: .env.example  .gitignore  .notebook-target.yml  CLAUDE.md  Makefile  README.md  answers.md  config_d128.yaml  config_d32.yaml  config_d64.yaml  docker-compose.yml  fix_shm.py  force_zero_workers.py  pyproject.toml
.beads/: config.yaml  dolt-server.activity
.beads/backup/: backup_state.json  dependencies.jsonl  events.jsonl  issues.jsonl
.devcontainer/: devcontainer.json
configs/: default.yaml  demo.yaml
docker/: Dockerfile.torch.dev.gpu
docs/: architecture.md
notebooks/: notebook-database.yml
notebooks/self-supervised/: tcc_pouring_tutorial_aegean_main-executed.ipynb  tcc_pouring_tutorial_aegean_main.ipynb
scripts/: download_pouring_data.sh
src/tcc/: __init__.py  alignment.py  config.py  datasets.py  deterministic_alignment.py  evaluate.py  losses.py  stochastic_alignment.py  train.py
src/tcc/algos/: __init__.py  algorithm.py  alignment.py  alignment_sal_tcn.py  classification.py  registry.py  sal.py  tcn.py
src/tcc/dataset_preparation/: __init__.py  dataset_utils.py  images_to_dataset.py  videos_to_dataset.py  visualize_dataset.py
src/tcc/evaluation/: __init__.py  algo_loss.py  classification.py  event_completion.py  few_shot_classification.py  kendalls_tau.py  registry.py  task.py  task_utils.py
tests/: test_algos.py  test_config.py  test_dataset_preparation.py  test_datasets.py  test_evaluation.py  test_losses.py  test_models.py  test_train.py
